--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </div>
     
     <!-- Footer -->
-    <div id="footer">
+    <div id="footer" class="modal-footer">
       <div class="container">
         <p class="muted">
           made by Daniel, Max and Hannes
